test/fails/bad_types/par_basics4.lgl
tag par<`t : vec2->vec3> is vec2; // Must be constrained by vecs

void main() {
    print 1;
}